trying to fix css issues

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title></title>
+<meta charset="utf-8">
+  <title>Jerel C.</title>
     <link rel="stylesheet" type="style/css" href="css/reset.css" />
-    <link rel="stylesheet" type="style/css" href="css/main.css" />
+    <link rel="stylesheet" type="style/css" href="css/default.css" />
 </head>
 <body>
 
