--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
   <title>Jerel C.</title>
     <link rel="stylesheet" type="style/css" href="css/reset.css" />
-    <link rel="stylesheet" type="style/css" href="css/default.css" />
+    <link rel="stylesheet" type="style/css" href="css/main.css" />
 </head>
 <body>
 
