--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="utf-8">
   <title>Jerel C.</title>
-    <link rel="stylesheet" type="style/css" href="css/reset.css" />
-    <link rel="stylesheet" type="style/css" href="css/main.css" />
+    <link rel="stylesheet" type="text/css" href="css/reset.css" />
+    <link rel="stylesheet" type="text/css" href="css/main.css" />
 </head>
 <body>
 
